# dark-factory-experiment-etheroi

./: .gitignore  CLAUDE.md  README.md
.archon/workflows/: dark-factory-fix-github-issue.yaml  dark-factory-validate-pr.yaml
app/: .gitignore
app/backend/: config.py  main.py  pyproject.toml  rate_limit.py
app/backend/alembic/versions/: 0002_add_search_vector.py
app/backend/auth/: __init__.py  dependencies.py  password.py  tokens.py
app/backend/db/: postgres.py  repository.py  schema.py  user_messages_repo.py  users_repo.py
app/backend/ingest/: __init__.py  supadata_client.py  youtube_url.py
app/backend/llm/: openrouter.py
app/backend/rag/: chunker.py  retriever.py  retriever_hybrid.py  tools.py
app/backend/routes/: admin.py  auth.py  channels.py  conversations.py  ingest.py  messages.py  version.py
app/backend/services/: supadata.py  video_ingest.py  youtube_meta.py
app/backend/tests/: conftest.py  test_admin.py  test_auth.py  test_channel_sync.py  test_chunk_timestamps.py  test_chunker_timestamps.py  test_config.py  test_create_chunk.py  test_ingest_cache_invalidation.py  test_ingest_segments.py  test_rate_limit.py  test_repository_hybrid_search.py  test_retriever_cache.py  test_retriever_hybrid.py  test_schema_migration.py  test_search_conversations.py  test_services_supadata.py  test_services_youtube_meta.py  test_sources_event.py  test_spa_catchall.py  test_stream_chat_max_tokens.py  test_supadata_client.py  test_system_prompt.py  test_tools.py  test_version.py  test_video_ingest.py
app/frontend/: index.html  package.json
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/__tests__/: ChatArea-refreshConversationsRef.test.tsx  ChatArea.test.tsx  Message.test.tsx  VideoExplorer-admin-gate.test.tsx  VideoExplorer.test.tsx  setup.ts  useStreamingResponse.test.ts
app/frontend/src/components/: ChatArea.tsx  ChatInput.test.tsx  ChatInput.tsx  CitationModal.test.tsx  CitationModal.tsx  Message.tsx  Sidebar.test.tsx  Sidebar.tsx  VideoExplorer.tsx
app/frontend/src/hooks/: useAdminVideos.ts  useAuth.ts  useAuth.tsx  useConversations.test.ts  useConversations.ts  useMessages.ts  useStreamingResponse.test.ts  useStreamingResponse.ts
app/frontend/src/lib/: api.ts  authApi.ts  exportMarkdown.test.ts  exportMarkdown.ts
app/frontend/src/pages/: AdminVideos.tsx  Login.tsx  NotFound.tsx  Signup.tsx
app/frontend/src/styles/: globals.css
deploy/: README.md  deploy.sh  docker-compose.yml  upstream.conf.example
docs/: API.md
